--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "webpack-dev-server": "^4.7.4"
     },  // ここにカンマを記述
  "engines" : {
-   "node": "14.x.x"  // ここに先ほど確認したバージョンを記述
+   "node": "14.19.1"  // ここに先ほど確認したバージョンを記述
   }
 }
